added caatinga region

--- a/THANKS
+++ b/THANKS
@@ -1,1 +1,8 @@
-Thanks for the Instituto Brasileiro de Geografia e Estatistica (IBGE) for the satellite images of Brazil (http://downloads.ibge.gov.br/downloads_geociencias.htm).
+Thanks to:
+
+- Instituto Brasileiro de Geografia e Estatistica (IBGE) for the satellite images of the Brazilian cerrado: http://downloads.ibge.gov.br/downloads_geociencias.htm
+- Diogo Sergio for the image of the caatinga trees: http://commons.wikimedia.org/wiki/File:Caatinga_Xiquexique_pedras_01.JPG
+- Maria Hsu for the image of a caatinga tree: https://www.flickr.com/photos/14323530@N05/2150992479/
+- Leonardo "Leguas" Carvalho for the image of the Ipe-Amarelo tree: http://pt.wikipedia.org/wiki/Ficheiro:Ipe_detail.jpg
+- Spoladore for the image of the Lixeira tree: http://pt.wikipedia.org/wiki/Cajueiro-bravo-do-campo#/media/File:Lixeira_do_cerrado_de_Mato_Grosso.JPG
+- Otávio Nogueira for the image of a cerrado tree: https://www.flickr.com/photos/55953988@N00/3896942038
