added slum textures to Mata Atlantica

--- a/THANKS
+++ b/THANKS
@@ -6,3 +6,4 @@ Thanks to:
 - Leonardo "Leguas" Carvalho for the image of the Ipe-Amarelo tree: http://pt.wikipedia.org/wiki/Ficheiro:Ipe_detail.jpg
 - Spoladore for the image of the Lixeira tree: http://pt.wikipedia.org/wiki/Cajueiro-bravo-do-campo#/media/File:Lixeira_do_cerrado_de_Mato_Grosso.JPG
 - Otávio Nogueira for the image of a cerrado tree: https://www.flickr.com/photos/55953988@N00/3896942038
+- P199 for the image of Las Piñas City, the Philippines: http://commons.wikimedia.org/wiki/File:Las_Pinas_City.jpg
