new textures for California

--- a/THANKS
+++ b/THANKS
@@ -6,3 +6,4 @@ Thanks to:
 - Otávio Nogueira for the image of a cerrado tree: https://www.flickr.com/photos/55953988@N00/3896942038
 - Leandro Neumann Ciuffo for the image Cerrado sul-mato-grossense (5801201223).jpg: https://commons.wikimedia.org/wiki/File:Cerrado_sul-mato-grossense_%285801201223%29.jpg
 - Guilherme Jofili for the image Basta uma chuvinha e o sertao colore!: https://www.flickr.com/photos/gjofili/8220416529/
+- United States Geological Survey (USGS) for the satellite images of California: http://www.usgs.gov/
